# HW6-HMM

./: README.md  pyproject.toml
.github/workflows/: test.yml
hmm/: hmm.py
test/: test_hmm.py
